# thinkbox

./: ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
scripts/: archive-repo.sh  download-repo.sh  download.sh  publish.py  publish.sh  queue.py  queue.sh  search.sh  uuid7.sh
scripts/publishers/: bluesky.py  bluesky.sh
skills/card/: SKILL.md
skills/ingest/: SKILL.md
skills/ingest-repo/: SKILL.md
skills/lit-thread/: SKILL.md
skills/publish/: SKILL.md
skills/search/: SKILL.md
skills/socrates/: SKILL.md
skills/transcribator/: SKILL.md
skills/wiki/: SKILL.md
skills/xettel/: SKILL.md
src/thinkbox_search/: embed.py  search.py
src/thinkbox_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
